<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchParentMatchParentTheme">

    <LinearLayout
        style="@style/MatchParentWrapContentTheme"
        android:orientation="vertical">

        <EditText
            style="@style/MarginLeftTopRightTheme"
            android:id="@+id/customer_name_edit_text"
            android:hint="@string/name_text"
            android:inputType="textCapWords" />

        <TextView
            style="@style/MarginLeftTopTheme"
            android:id="@+id/topping_title"
            android:text="@string/toppings_title"
            android:textAllCaps="true"/>

        <CheckBox
            style="@style/MarginLeftTopTheme"
            android:id="@+id/whipped_cream_checkbox"
            android:onClick="checkboxClicked"
            android:paddingLeft="5dp"
            android:text="@string/whipped_cream_text" />

        <CheckBox
            style="@style/MarginLeftTopTheme"
            android:id="@+id/chocolate_checkbox"
            android:onClick="checkboxClicked"
            android:paddingLeft="5dp"
            android:text="@string/chocolate__text" />

        <TextView
            style="@style/MarginLeftTopTheme"
            android:id="@+id/quantity_title"
            android:text="@string/quantity_text"
            android:textAllCaps="true" />

        <LinearLayout
            style="@style/WrapContentTheme"
            android:orientation="horizontal">

            <Button
                style="@style/ButtonMarginLeftTopTheme"
                android:id="@+id/decrement_button"
                android:enabled="false"
                android:onClick="decrementQuantity"
                android:text="@string/decrement" />

            <TextView
                style="@style/MarginLeftTopRightQuantityTheme"
                android:id="@+id/quantity_text_view"
                android:layout_marginTop="@dimen/margin"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="@dimen/value_size"
                android:textStyle="bold" />

            <Button
                style="@style/ButtonMarginTopTheme"
                android:id="@+id/increment_button"
                android:onClick="incrementQuantity"
                android:text="@string/increment" />
        </LinearLayout>

        <TextView
            style="@style/MarginLeftTopTheme"
            android:id="@+id/toatl_price_title"
            android:text="@string/total_text"
            android:textAllCaps="true" />

        <TextView
            style="@style/MarginLeftTopTheme"
            android:id="@+id/total_price_text_view"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="@dimen/value_size"
            android:textStyle="bold" />

        <Button
            style="@style/MarginLeftTopTheme"
            android:id="@+id/order_button"
            android:onClick="submitOrder"
            android:text="@string/order_button_text" />

    </LinearLayout>
</ScrollView>